# unicam.resource

./: .gitignore  .gitmodules  CMakeLists.txt  ldscript.lds
cmake/: bin2h.cmake  catalogs.cmake  sfdc.cmake  verstring.cmake
include_pub/resources/: unicam.h
sfd/: unicam_lib.sfd
src/: c790.c  constructdl.c  getconfig.c  getcropsize.c  getframebuffer.c  getkernel.c  init.c  main.c  mbox.c  mbox.h  rga_common.h  rga_host.c  rga_host.h  setconfig.c  smoothing.c  smoothing.h  start.c  stop.c  unicam.c  unicam.h  unicam.h.in  vc4-regs-unicam.h  videocore.c  videocore.h
